--- a/becomedigitalsdk/src/main/AndroidManifest.xml
+++ b/becomedigitalsdk/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:name=".MyApplication"
         android:hardwareAccelerated="true"
         android:largeHeap="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".StartActivity"
